Examen4/simplon.output
Terminales no usados en la gramática

   RESTO


Estado 93 conflictos: 1 desplazamiento/reducción
Estado 105 conflictos: 1 desplazamiento/reducción
Estado 208 conflictos: 1 desplazamiento/reducción
Estado 209 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: programa $end

    1 programa: modulos exportaciones declaraciones_subprograma

    2 modulos: %empty
    3        | modulos modulo

    4 modulo: MODULO NOMBRE_MODULO ';'

    5 exportaciones: %empty
    6              | EXPORTAR identificadores ';'

    7 identificadores: IDENTIFICADOR
    8                | identificadores ',' IDENTIFICADOR

    9 declaraciones_subprograma: declaracion_subprograma
   10                          | declaraciones_subprograma declaracion_subprograma

   11 declaracion_subprograma: especificacion_subprograma cuerpo_subprograma ';'

   12 especificacion_subprograma: PROCEDIMIENTO IDENTIFICADOR parametrizacion
   13                           | FUNCION IDENTIFICADOR parametrizacion DEVOLVER especificacion_tipo

   14 parametrizacion: %empty
   15                | '(' lista_declaracion_parametros ')'

   16 lista_declaracion_parametros: declaracion_parametros
   17                             | lista_declaracion_parametros ';' declaracion_parametros

   18 declaracion_parametros: identificadores ':' modo especificacion_tipo

   19 modo: VALOR
   20     | REFERENCIA

   21 cuerpo_subprograma: %empty
   22                   | ES COMIENZO bucle_instruccion FIN IDENTIFICADOR
   23                   | ES bucle_declaracion COMIENZO bucle_instruccion FIN IDENTIFICADOR

   24 declaracion: declaracion_objeto
   25            | declaracion_tipo
   26            | declaracion_subtipo
   27            | declaracion_subprograma

   28 bucle_declaracion: declaracion
   29                  | bucle_declaracion declaracion

   30 declaracion_objeto: identificadores ':' CONSTANTE tipo_escalar ASIGNACION expresion ';'
   31                   | identificadores ':' tipo_escalar ASIGNACION expresion ';'
   32                   | identificadores ':' tipo_compuesto ';'
   33                   | identificadores ':' nombre_tipo ';'

   34 tipo_escalar: BOOLEANO
   35             | CARACTER
   36             | ENTERO
   37             | REAL

   38 declaracion_tipo: TIPO nombre_tipo ES tipo_compuesto ';'

   39 tipo_compuesto: tipo_tabla
   40               | tipo_registro

   41 tipo_tabla: TABLA '(' expresion PUNTOS expresion ')' DE especificacion_tipo

   42 especificacion_tipo: tipo_compuesto
   43                    | nombre_tipo

   44 tipo_registro: REGISTRO campo FIN REGISTRO

   45 campo: identificadores ':' especificacion_tipo ';'
   46      | campo identificadores ':' especificacion_tipo ';'

   47 declaracion_subtipo: SUBTIPO nombre_tipo ES definicion_subtipo ';'

   48 definicion_subtipo: nombre_tipo restriccion

   49 restriccion: RANGO expresion PUNTOS expresion
   50            | restriccion expresion

   51 nombre_tipo: IDENTIFICADOR
   52            | tipo_escalar

   53 instruccion: VACIA ';'
   54            | instruccion_asignacion
   55            | instruccion_salir
   56            | instruccion_bloque
   57            | instruccion_devolver
   58            | instruccion_llamada
   59            | instruccion_si
   60            | instruccion_casos
   61            | instruccion_bucle

   62 bucle_instruccion: instruccion
   63                  | bucle_instruccion instruccion

   64 instruccion_asignacion: nombre ASIGNACION expresion ';'

   65 instruccion_salir: SALIR ';'
   66                  | SALIR DE IDENTIFICADOR ';'
   67                  | SALIR CUANDO expresion ';'
   68                  | SALIR DE IDENTIFICADOR CUANDO expresion ';'

   69 instruccion_bloque: DECLARACION bucle_declaracion COMIENZO bucle_instruccion FIN ';'

   70 instruccion_devolver: DEVOLVER expresion ';'

   71 instruccion_llamada: llamada_subprograma ';'

   72 llamada_subprograma: IDENTIFICADOR '(' ')'
   73                    | IDENTIFICADOR '(' parametros ')'

   74 parametros: expresion
   75           | parametros ',' expresion

   76 instruccion_si: SI expresion ENTONCES bucle_instruccion FIN SI ';'
   77               | SI expresion ENTONCES bucle_instruccion SINO bucle_instruccion FIN SI ';'

   78 instruccion_casos: CASOS expresion ES caso FIN CASOS ';'

   79 caso: CUANDO entradas FLECHA bucle_instruccion
   80     | caso CUANDO entradas FLECHA bucle_instruccion

   81 entradas: entrada
   82         | entradas '|' entrada

   83 entrada: expresion
   84        | expresion PUNTOS expresion
   85        | OTRO

   86 instruccion_bucle: clausula_iteracion bucle_base ';'
   87                  | IDENTIFICADOR ':' clausula_iteracion bucle_base ';'
   88                  | clausula_iteracion bucle_base IDENTIFICADOR ';'
   89                  | IDENTIFICADOR ':' clausula_iteracion bucle_base IDENTIFICADOR ';'

   90 clausula_iteracion: MIENTRAS expresion
   91                   | PARA IDENTIFICADOR EN IDENTIFICADOR
   92                   | REPETIR IDENTIFICADOR EN expresion PUNTOS expresion
   93                   | REPETIR IDENTIFICADOR EN DESCENDENTE expresion PUNTOS expresion
   94                   | REPETIR IDENTIFICADOR EN expresion PUNTOS expresion PUNTOS expresion
   95                   | REPETIR IDENTIFICADOR EN DESCENDENTE expresion PUNTOS expresion PUNTOS expresion

   96 bucle_base: BUCLE bucle_instruccion FIN BUCLE

   97 expresion: and_logico
   98          | expresion OR and_logico

   99 and_logico: negacion
  100           | and_logico AND negacion

  101 negacion: comparacion
  102         | '~' comparacion

  103 comparacion: desplazamiento
  104            | desplazamiento '>' desplazamiento
  105            | desplazamiento '<' desplazamiento
  106            | desplazamiento '=' desplazamiento
  107            | desplazamiento LEQ desplazamiento
  108            | desplazamiento GEQ desplazamiento
  109            | desplazamiento NEQ desplazamiento

  110 desplazamiento: suma_resta
  111               | desplazamiento DESP_DCHA suma_resta
  112               | desplazamiento DESP_IZDA suma_resta

  113 suma_resta: multi_div
  114           | suma_resta '-' multi_div
  115           | suma_resta '+' multi_div

  116 multi_div: potencia
  117          | multi_div '*' potencia
  118          | multi_div '/' potencia
  119          | multi_div '\\' potencia

  120 potencia: expresion_posfija
  121         | expresion_posfija POTENCIA potencia

  122 expresion_posfija: expresion_unaria
  123                  | expresion_unaria operador_posfijo

  124 operador_posfijo: INC
  125                 | DEC

  126 expresion_unaria: primario
  127                 | '-' primario

  128 primario: literal
  129         | nombre
  130         | '(' expresion ')'

  131 nombre: IDENTIFICADOR
  132       | elemento_tabla
  133       | campo_registro
  134       | llamada_subprograma

  135 campo_registro: nombre '.' IDENTIFICADOR

  136 elemento_tabla: nombre '[' expresion ']'

  137 literal: numero
  138        | booleano
  139        | CTC_CARACTER
  140        | CTC_CADENA

  141 booleano: VERDADERO
  142         | FALSO

  143 numero: CTC_ENTERA
  144       | CTC_REAL


Terminales con las reglas donde aparecen

$end (0) 0
'(' (40) 15 41 72 73 130
')' (41) 15 41 72 73 130
'*' (42) 117
'+' (43) 115
',' (44) 8 75
'-' (45) 114 127
'.' (46) 135
'/' (47) 118
':' (58) 18 30 31 32 33 45 46 87 89
';' (59) 4 6 11 17 30 31 32 33 38 45 46 47 53 64 65 66 67 68 69 70
    71 76 77 78 86 87 88 89
'<' (60) 105
'=' (61) 106
'>' (62) 104
'[' (91) 136
'\\' (92) 119
']' (93) 136
'|' (124) 82
'~' (126) 102
error (256)
BOOLEANO (258) 34
BUCLE (259) 96
CARACTER (260) 35
CASOS (261) 78
COMIENZO (262) 22 23 69
CONSTANTE (263) 30
CUANDO (264) 67 68 79 80
DE (265) 41 66 68
DEVOLVER (266) 13 70
EN (267) 91 92 93 94 95
ENTERO (268) 36
ENTONCES (269) 76 77
ES (270) 22 23 38 47 78
EXPORTAR (271) 6
DECLARACION (272) 69
DESCENDENTE (273) 93 95
FALSO (274) 142
FIN (275) 22 23 44 69 76 77 78 96
FUNCION (276) 13
MIENTRAS (277) 90
MODULO (278) 4
OTRO (279) 85
PARA (280) 91
PROCEDIMIENTO (281) 12
RANGO (282) 49
REAL (283) 37
REFERENCIA (284) 20
REGISTRO (285) 44
REPETIR (286) 92 93 94 95
SALIR (287) 65 66 67 68
SI (288) 76 77
SINO (289) 77
SUBTIPO (290) 47
TABLA (291) 41
TIPO (292) 38
VACIA (293) 53
VALOR (294) 19
VERDADERO (295) 141
CTC_CARACTER (296) 139
CTC_CADENA (297) 140
IDENTIFICADOR (298) 7 8 12 13 22 23 51 66 68 72 73 87 88 89 91 92 93
    94 95 131 135
CTC_ENTERA (299) 143
CTC_REAL (300) 144
NOMBRE_MODULO (301) 4
PUNTOS (302) 41 49 84 92 93 94 95
RESTO (303)
ASIGNACION (304) 30 31 64
FLECHA (305) 79 80
POTENCIA (306) 121
INC (307) 124
DEC (308) 125
DESP_IZDA (309) 112
DESP_DCHA (310) 111
LEQ (311) 107
GEQ (312) 108
NEQ (313) 109
AND (314) 100
OR (315) 98


No terminales con las reglas donde aparecen

$accept (79)
    en la izquierda: 0
programa (80)
    en la izquierda: 1, en la derecha: 0
modulos (81)
    en la izquierda: 2 3, en la derecha: 1 3
modulo (82)
    en la izquierda: 4, en la derecha: 3
exportaciones (83)
    en la izquierda: 5 6, en la derecha: 1
identificadores (84)
    en la izquierda: 7 8, en la derecha: 6 8 18 30 31 32 33 45 46
declaraciones_subprograma (85)
    en la izquierda: 9 10, en la derecha: 1 10
declaracion_subprograma (86)
    en la izquierda: 11, en la derecha: 9 10 27
especificacion_subprograma (87)
    en la izquierda: 12 13, en la derecha: 11
parametrizacion (88)
    en la izquierda: 14 15, en la derecha: 12 13
lista_declaracion_parametros (89)
    en la izquierda: 16 17, en la derecha: 15 17
declaracion_parametros (90)
    en la izquierda: 18, en la derecha: 16 17
modo (91)
    en la izquierda: 19 20, en la derecha: 18
cuerpo_subprograma (92)
    en la izquierda: 21 22 23, en la derecha: 11
declaracion (93)
    en la izquierda: 24 25 26 27, en la derecha: 28 29
bucle_declaracion (94)
    en la izquierda: 28 29, en la derecha: 23 29 69
declaracion_objeto (95)
    en la izquierda: 30 31 32 33, en la derecha: 24
tipo_escalar (96)
    en la izquierda: 34 35 36 37, en la derecha: 30 31 52
declaracion_tipo (97)
    en la izquierda: 38, en la derecha: 25
tipo_compuesto (98)
    en la izquierda: 39 40, en la derecha: 32 38 42
tipo_tabla (99)
    en la izquierda: 41, en la derecha: 39
especificacion_tipo (100)
    en la izquierda: 42 43, en la derecha: 13 18 41 45 46
tipo_registro (101)
    en la izquierda: 44, en la derecha: 40
campo (102)
    en la izquierda: 45 46, en la derecha: 44 46
declaracion_subtipo (103)
    en la izquierda: 47, en la derecha: 26
definicion_subtipo (104)
    en la izquierda: 48, en la derecha: 47
restriccion (105)
    en la izquierda: 49 50, en la derecha: 48 50
nombre_tipo (106)
    en la izquierda: 51 52, en la derecha: 33 38 43 47 48
instruccion (107)
    en la izquierda: 53 54 55 56 57 58 59 60 61, en la derecha: 62
    63
bucle_instruccion (108)
    en la izquierda: 62 63, en la derecha: 22 23 63 69 76 77 79 80
    96
instruccion_asignacion (109)
    en la izquierda: 64, en la derecha: 54
instruccion_salir (110)
    en la izquierda: 65 66 67 68, en la derecha: 55
instruccion_bloque (111)
    en la izquierda: 69, en la derecha: 56
instruccion_devolver (112)
    en la izquierda: 70, en la derecha: 57
instruccion_llamada (113)
    en la izquierda: 71, en la derecha: 58
llamada_subprograma (114)
    en la izquierda: 72 73, en la derecha: 71 134
parametros (115)
    en la izquierda: 74 75, en la derecha: 73 75
instruccion_si (116)
    en la izquierda: 76 77, en la derecha: 59
instruccion_casos (117)
    en la izquierda: 78, en la derecha: 60
caso (118)
    en la izquierda: 79 80, en la derecha: 78 80
entradas (119)
    en la izquierda: 81 82, en la derecha: 79 80 82
entrada (120)
    en la izquierda: 83 84 85, en la derecha: 81 82
instruccion_bucle (121)
    en la izquierda: 86 87 88 89, en la derecha: 61
clausula_iteracion (122)
    en la izquierda: 90 91 92 93 94 95, en la derecha: 86 87 88 89
bucle_base (123)
    en la izquierda: 96, en la derecha: 86 87 88 89
expresion (124)
    en la izquierda: 97 98, en la derecha: 30 31 41 49 50 64 67 68
    70 74 75 76 77 78 83 84 90 92 93 94 95 98 130 136
and_logico (125)
    en la izquierda: 99 100, en la derecha: 97 98 100
negacion (126)
    en la izquierda: 101 102, en la derecha: 99 100
comparacion (127)
    en la izquierda: 103 104 105 106 107 108 109, en la derecha: 101
    102
desplazamiento (128)
    en la izquierda: 110 111 112, en la derecha: 103 104 105 106 107
    108 109 111 112
suma_resta (129)
    en la izquierda: 113 114 115, en la derecha: 110 111 112 114 115
multi_div (130)
    en la izquierda: 116 117 118 119, en la derecha: 113 114 115 117
    118 119
potencia (131)
    en la izquierda: 120 121, en la derecha: 116 117 118 119 121
expresion_posfija (132)
    en la izquierda: 122 123, en la derecha: 120 121
operador_posfijo (133)
    en la izquierda: 124 125, en la derecha: 123
expresion_unaria (134)
    en la izquierda: 126 127, en la derecha: 122 123
primario (135)
    en la izquierda: 128 129 130, en la derecha: 126 127
nombre (136)
    en la izquierda: 131 132 133 134, en la derecha: 64 129 135 136
campo_registro (137)
    en la izquierda: 135, en la derecha: 133
elemento_tabla (138)
    en la izquierda: 136, en la derecha: 132
literal (139)
    en la izquierda: 137 138 139 140, en la derecha: 128
booleano (140)
    en la izquierda: 141 142, en la derecha: 138
numero (141)
    en la izquierda: 143 144, en la derecha: 137


Estado 0

    0 $accept: . programa $end

    $default  reduce usando la regla 2 (modulos)

    programa  ir al estado 1
    modulos   ir al estado 2


Estado 1

    0 $accept: programa . $end

    $end  desplazar e ir al estado 3


Estado 2

    1 programa: modulos . exportaciones declaraciones_subprograma
    3 modulos: modulos . modulo

    EXPORTAR  desplazar e ir al estado 4
    MODULO    desplazar e ir al estado 5

    $default  reduce usando la regla 5 (exportaciones)

    modulo         ir al estado 6
    exportaciones  ir al estado 7


Estado 3

    0 $accept: programa $end .

    $default  aceptar


Estado 4

    6 exportaciones: EXPORTAR . identificadores ';'

    IDENTIFICADOR  desplazar e ir al estado 8

    identificadores  ir al estado 9


Estado 5

    4 modulo: MODULO . NOMBRE_MODULO ';'
